--- a/betasite/adminSite/templates/adminSite/annualReport.html
+++ b/betasite/adminSite/templates/adminSite/annualReport.html
@@ -16,15 +16,21 @@
 			<div class="row">
 				<div class="column"></div>
 				<div class="twelve wide column">
+					<h3>Classes</h3>
 					<table class="ui single line table">
 					  <thead>
 					    <tr>
-					      <th></th>
-					      <th></th>
-					      <th></th>
+					      <th>Class Year</th>
+					      <th>Amount Contributed</th>
 					    </tr>
 					  </thead>
 					  <tbody>
+					  {% for key, value in classes.items %}
+					  <tr>
+					  	<td>{{ key }}</td>
+					  	<td>{{ value }} PHP</td>
+					  </tr>
+					  {% endfor %}
 					  </tbody>
 					   <tfoot></tfoot>
 					</table>
