Modified Annual Report

--- a/betasite/adminSite/templates/adminSite/annualReport.html
+++ b/betasite/adminSite/templates/adminSite/annualReport.html
@@ -10,7 +10,7 @@
 			<div class="row">
 				<div class="column"></div>
 				<div class="column">
-					<h2>Annual Report</h2>
+					<h2>Annual Report: {{ date_list.0.year }}</h2>
 				</div>
 			</div>
 			<div class="row">
