Modified some minor stuff like affiliation, address, etc.

--- a/betasite/adminSite/templates/adminSite/addDonor.html
+++ b/betasite/adminSite/templates/adminSite/addDonor.html
@@ -68,7 +68,7 @@
 						</div>
 						<div class="field">
 							<div class="ui fluid search selection dropdown">
-								<input type="hidden" name="donor" class="">
+								<input type="hidden" name="affiliation" class="">
 								<i class="dropdown icon"></i>
 								<div class="default text">Select Donor Affiliation</div>
 								<div class="menu">
