--- a/betasite/adminSite/templates/adminSite/donor.html
+++ b/betasite/adminSite/templates/adminSite/donor.html
@@ -50,6 +50,7 @@
 						<div class="item"><h5>Contact Number: {{ donor.contactno }}</h5></div>
 						<div class="item"><h5>Email: {{ donor.email }}</h5></div>
 						<div class="item"><h5>Credit Card No. : {{ donor.creditno }}</h5></div>
+						<div class="item"><h5>Affiliation: {{ donor.donor_affiliation }}</h5></div>
 					</div>
 				</div>
 				<div class="column"></div>
