--- a/betasite/adminSite/templates/adminSite/editDonor.html
+++ b/betasite/adminSite/templates/adminSite/editDonor.html
@@ -38,7 +38,7 @@
 							<label>Address</label>
 						</div>
 						<div class="field">
-							<input type="text" placeholder="Address" name="address">
+							<input type="text" placeholder="Address" name="address" value="{{ donor.address }}">
 						</div>
 						<div class="field">
 							<label>Class Year</label>
@@ -60,7 +60,7 @@
 						</div>
 						<div class="field">
 							<div class="ui fluid search selection dropdown">
-								<input type="hidden" name="donor" value="{{ donor.donor_affiliation.donorid }}">
+								<input type="hidden" name="affiliation" value="{{ donor.donor_affiliation.donorid }}">
 								<i class="dropdown icon"></i>
 								<div class="default text">Select Donor Affiliation</div>
 								<div class="menu">
