Changed timezone in settings and added coordinator list report (NOT FINISHED)

--- a/betasite/adminSite/templates/adminSite/base.html
+++ b/betasite/adminSite/templates/adminSite/base.html
@@ -31,7 +31,7 @@
 				<a href="{% url 'adminSite:monthlyReportGenerator' %}" class="item">Monthly Report</a>
 				<a href="{% url 'adminSite:duePaymentsGenerator' %}" class="item">Due Payments</a>
 				<a href="{% url 'adminSite:eventReportGenerator' %}" class="item">Event Report</a>
-				<a href="" class="item">Coordinator's Class List</a>
+				<a href="{% url 'adminSite:coordinatorListGenerator' %}" class="item">Coordinator's Class List</a>
 				<a href="" class="item">Potential Donors</a>
 			</div>
 		</div>
