--- a/betasite/adminSite/templates/adminSite/base.html
+++ b/betasite/adminSite/templates/adminSite/base.html
@@ -32,7 +32,7 @@
 				<a href="{% url 'adminSite:duePaymentsGenerator' %}" class="item">Due Payments</a>
 				<a href="{% url 'adminSite:eventReportGenerator' %}" class="item">Event Report</a>
 				<a href="{% url 'adminSite:coordinatorListGenerator' %}" class="item">Coordinator's Class List</a>
-				<a href="" class="item">Potential Donors</a>
+				<a href="{% url 'adminSite:potentialDonors' %}" class="item">Potential Donors</a>
 			</div>
 		</div>
 		<a href="{% url 'adminSite:logout' %}" class="item">Logout</a>
