--- a/betasite/adminSite/templates/adminSite/duePayments.html
+++ b/betasite/adminSite/templates/adminSite/duePayments.html
@@ -1,7 +1,7 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
 {% load sum %}
-{% block title %}Beta University Admin: Due Payments{% endblock %}
+{% block title %}Beta University Admin: HELLO WORLD{% endblock %}
 
 {% block style %}{% endblock %}
 
